Add comment for new new dependency

--- a/fidesctl/Dockerfile
+++ b/fidesctl/Dockerfile
@@ -1,14 +1,17 @@
 FROM python:3.8-slim-buster
 
 # Install auxiliary software
-RUN apt-get update \
-    && apt-get -y install libpq-dev gcc
+RUN apt-get update
     
 RUN apt-get install -y \
     git \
     ipython \
     make \
-    vim
+    vim \
+    gcc
+
+# libpq-dev provides all requirements for building Psycopg2
+RUN apt-get -y install libpq-dev
 
 # Update pip and install requirements
 RUN pip install -U pip
