Fix psycopg2 binary dependency (#101)
* fix psycopg2-binary missing binaries for build

* Add comment for new new dependency

* remove uneeded whitespace

Co-authored-by: Eduardo Armendariz <eduardoarmendariz@eth-27s-mbp.lan>
Co-authored-by: Eduardo Armendariz <eduardo@ethyca.com>

--- a/fidesctl/Dockerfile
+++ b/fidesctl/Dockerfile
@@ -6,7 +6,11 @@ RUN apt-get install -y \
     git \
     ipython \
     make \
-    vim
+    vim \
+    gcc
+
+# libpq-dev provides all requirements for building Psycopg2
+RUN apt-get -y install libpq-dev
 
 # Update pip and install requirements
 RUN pip install -U pip
