--- a/fidesctl/example_config.toml
+++ b/fidesctl/example_config.toml
@@ -4,3 +4,6 @@ api_key = "test_api_key"
 
 [cli]
 server_url = "http://fidesapi:8080"
+
+[api]
+database_url = "mysql+mysqlconnector://fidesdb:fidesdb@fides-db:3306/fidesdb"
