Update container, database initialization, web server to support postgresql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,15 +40,15 @@ services:
       - env_files/fides_server.env
 
   fides-db:
-    image: mysql:8
+    image: postgres:13.4
     volumes:
-      - mysql:/var/lib/mysql
+      - postgres:/var/lib/postgresql/data
     expose:
-      - 3306
+      - 5432
     ports:
-      - "3306:3306"
+      - "5432:5432"
     env_file:
-      - env_files/mysql_db.env
+      - env_files/postgres_db.env
 
   docs:
     build:
@@ -62,4 +62,4 @@ services:
       - "8000:8000"
 
 volumes:
-  mysql:
+  postgres:
