--- a/env_files/fidesctl.env
+++ b/env_files/fidesctl.env
@@ -1,2 +1,2 @@
 FIDES_CONFIG_PATH="/fides/fidesctl/example_config.toml"
-FIDES_SERVER_SQLALCHEMY_CONN_STR="mysql+mysqlconnector://fidesdb:fidesdb@fides-db:3306/fidesdb"
+FIDES_SERVER_SQLALCHEMY_CONN_STR="postgresql+psycopg2://fidesdb:fidesdb@fides-db:5432/fidesdb"
