--- a/env_files/fides_server.env
+++ b/env_files/fides_server.env
@@ -1,3 +1,3 @@
-FIDES_DB_JDBC_URL="jdbc:mysql://fides-db:3306/fidesdb"
+FIDES_DB_JDBC_URL="jdbc:postgresql://fides-db:5432/fidesdb"
 FIDES_DB_JDBC_USER="fidesdb"
 FIDES_DB_JDBC_PASSWORD="fidesdb" 
