--- a/fidesapi/src/main/resources/reference.conf
+++ b/fidesapi/src/main/resources/reference.conf
@@ -1,10 +1,10 @@
 #maximun size of uploaded files we will accept.
 fides.file.upload.max.bytes=3145728
 
-fides.db.jdbc.url="jdbc:mysql://localhost:3306/devtools"
+fides.db.jdbc.url="jdbc:postgresql://localhost:5432/devtools"
 fides.db.jdbc.user=dpcp
 fides.db.jdbc.password=dpcp
-fides.db.driver=com.mysql.cj.jdbc.Driver
+fides.db.driver=org.postgresql.Driver
 
 #optional values
 fides.db.jdbc.minPoolSize=5
