--- a/fidesctl/example_config.toml
+++ b/fidesctl/example_config.toml
@@ -6,4 +6,4 @@ api_key = "test_api_key"
 server_url = "http://fidesapi:8080"
 
 [api]
-database_url = "postgresql+psycopg2://fidesdb:fidesdb@fides-db:5432/fidesdb"
+database_url = "postgresql+psycopg2://fidesdb:fidesdb@fidesdb:5432/fidesdb"
