--- a/fidesctl/default_taxonomy/data_qualifiers.yml
+++ b/fidesctl/default_taxonomy/data_qualifiers.yml
@@ -1,15 +1,15 @@
 data_qualifier:
-  - fidesKey: "identified_data"
+  - fides_key: "identified_data"
     name: "Identified Data"
 
-  - fidesKey: "pseudonymized_data"
+  - fides_key: "pseudonymized_data"
     name: "Pseudonymized Data"
 
-  - fidesKey: "unlinked_pseudonymized_data"
+  - fides_key: "unlinked_pseudonymized_data"
     name: "Unlinked Pseudonymized Data"
 
-  - fidesKey: "anonymized_data"
+  - fides_key: "anonymized_data"
     name: "Anonymized Data"
 
-  - fidesKey: "aggregated_data"
+  - fides_key: "aggregated_data"
     name: "Aggregated Data"
