--- a/fidesctl/fides_resources/system.yml
+++ b/fidesctl/fides_resources/system.yml
@@ -1,6 +1,6 @@
 system:
   - organizationId: 1
-    fidesKey: "dataAnalyticsSystem"
+    fides_key: "dataAnalyticsSystem"
     name: "Data Analytics System"
     description: "A system used for analyzing customer behaviour."
     systemType: "Service"
@@ -17,7 +17,7 @@ system:
     systemDependencies: [customerDataSharingSystem]
 
   - organizationId: 1
-    fidesKey: "customerDataSharingSystem"
+    fides_key: "customerDataSharingSystem"
     name: "Customer Data Sharing System"
     description: "Share data about our users with third-parties."
     systemType: "Service"
