--- a/fidesctl/tests/data/failing_taxonomy.yml
+++ b/fidesctl/tests/data/failing_taxonomy.yml
@@ -1,36 +1,36 @@
 data_category:
-  - fidesKey: user_provided_data
+  - fides_key: user_provided_data
     name: "User Provided Data"
     description: "Data provided or created directly by a user of the system."
 
-  - fidesKey: political_opinion
+  - fides_key: political_opinion
     name: "Political Opinion"
     parentKey: user_provided_data
     description: "Data related to the individual's political opinions."
 
-  - fidesKey: name
+  - fides_key: name
     name: "Name"
     parentKey: user_provided_data
     description: "User's real name."
 
 data_subject:
-  - fidesKey: "anonymous_user"
+  - fides_key: "anonymous_user"
     name: "Anonymous User"
 
-  - fidesKey: "citizen_voter"
+  - fides_key: "citizen_voter"
     name: "Citizen Voter"
 
-  - fidesKey: "commuter"
+  - fides_key: "commuter"
     name: "Commuter"
 
-  - fidesKey: "consultant"
+  - fides_key: "consultant"
     name: "Consultant"
 
-  - fidesKey: "customer"
+  - fides_key: "customer"
     name: "Custom"
 
 data_use:
-  - fidesKey: "provide"
+  - fides_key: "provide"
     name: "Provide"
     description: |
       Provide means the use of specified data categories:
@@ -45,7 +45,7 @@ data_use:
       NOTE 2 The data use statement structure used in this example is described in Clause 10.
       In the case where a single scope is involved, provide also means to protect the customer content data that exists within this scope and to provide and communicate with the customer about the status and availability of the current capabilities of this scope.
 
-  - fidesKey: "provide_operational_support_for_contracted_service"
+  - fides_key: "provide_operational_support_for_contracted_service"
     name: "Provide Operational Support for Contracted Service"
     parentKey: "provide"
     description: |
@@ -55,7 +55,7 @@ data_use:
       — logging data for system and network maintenance and optimization;
       — correlation of service usage data and system events for fault tracking and root cause analysis.
 
-  - fidesKey: "improvement_of_business_support_for_contracted_service"
+  - fides_key: "improvement_of_business_support_for_contracted_service"
     name: "Improvement of Business Support for Contracted Service"
     parentKey: "provide"
     description: |
@@ -64,13 +64,13 @@ data_use:
       — financial controlling, budgeting and resource planning.
 
 data_qualifier:
-  - fidesKey: "identified_data"
+  - fides_key: "identified_data"
     name: "Identified Data"
     description: |
       Identified data is data that can unambiguously be associated with a specific person because PII is observable in the information. Guidance on what can be considered as identifiers can be found in ISO/IEC 29100:2011, 4.4.1.
       Identified data can be either PII or OPD.
 
-  - fidesKey: "pseudonymized_data"
+  - fides_key: "pseudonymized_data"
     name: "Pseudonymized Data"
     description: |
       Pseudonymized data is data for which all identifiers are substituted by aliases for which the alias assignment is such that it cannot be reversed by reasonable efforts of anyone other than the party that performed them.
@@ -79,7 +79,7 @@ data_qualifier:
 
 dataset:
   - organizationId: 1
-    fidesKey: "test_failing_db_dataset"
+    fides_key: "test_failing_db_dataset"
     name: "Sample DB Dataset"
     description: "This is a Sample Database Dataset"
     datasetType: "MySQL"
@@ -106,7 +106,7 @@ dataset:
 
 system:
   - organizationId: 1
-    fidesKey: "dataAnalyticsSystem"
+    fides_key: "dataAnalyticsSystem"
     name: "Data Analytics System"
     description: "A system used for analyzing customer behaviour."
     systemType: "Service"
@@ -121,7 +121,7 @@ system:
     systemDependencies: [customerDataSharingSystem]
 
   - organizationId: 1
-    fidesKey: "customerDataSharingSystem"
+    fides_key: "customerDataSharingSystem"
     name: "Customer Data Sharing System"
     description: "Share data about our users with third-parties."
     systemType: "Service"
@@ -139,12 +139,12 @@ system:
 
 policy:
   - organizationId: 1
-    fidesKey: "primaryPrivacyPolicy"
+    fides_key: "primaryPrivacyPolicy"
     name: "Primary Privacy Policy"
     description: "The main privacy policy for the organization."
     rules:
       - organizationId: 1
-        fidesKey: "rejectTargetedMarketing"
+        fides_key: "rejectTargetedMarketing"
         name: "Reject Targeted Biometric Marketing"
         description: "Disallow targeted marketing towards customers based on biometric data."
         dataCategories:
@@ -164,7 +164,7 @@ policy:
         action: REJECT
 
       - organizationId: 1
-        fidesKey: rejectSharingPoliticalOpinions
+        fides_key: rejectSharingPoliticalOpinions
         name: "Disallow Sharing Political Opinions"
         description: "Disallow sharing political opinions with third-parties."
         dataCategories:
