--- a/.github/workflows/publish_docs.yaml
+++ b/.github/workflows/publish_docs.yaml
@@ -2,6 +2,8 @@ name: Publish updated docs to gh-pages
 
 on:
   push:
+    branches:
+      - earmenda-publish-docs-ci
     paths:
       - "docs/**"
   
