fixes updates, adds a list endpoint [ci skip]

--- a/fidesctl/default_taxonomy/data_uses.yml
+++ b/fidesctl/default_taxonomy/data_uses.yml
@@ -5,15 +5,15 @@ data_use:
 
   - fides_key: "support_the_product_or_service"
     name: "Support the Product or Service"
-    parentKey: "provide_the_product_or_service"
+    parent_key: "provide_the_product_or_service"
 
   - fides_key: "support_optimization"
     name: "Support Optimization"
-    parentKey: "provide_the_product_or_service"
+    parent_key: "provide_the_product_or_service"
 
   - fides_key: "offers_of_product_or_service_upgrades"
     name: "Offers of Product or Service Upgrades"
-    parentKey: "provide_the_product_or_service"
+    parent_key: "provide_the_product_or_service"
 
   # Improvement Data
   - fides_key: "improve_the_product_or_service"
@@ -29,25 +29,25 @@ data_use:
 
   - fides_key: "first_party_advertising"
     name: "First Party Advertising"
-    parentKey: "marketing_advertising_or_promotion"
+    parent_key: "marketing_advertising_or_promotion"
 
   - fides_key: "third_party_advertising"
     name: "Third Party Advertising"
-    parentKey: "marketing_advertising_or_promotion"
+    parent_key: "marketing_advertising_or_promotion"
 
   # Marketing, Advertising or Promotion -> First Party Advertising
   - fides_key: "first_party_contextual_advertising"
     name: "First Party Contextual Advertising"
-    parentKey: "first_party_advertising"
+    parent_key: "first_party_advertising"
 
   - fides_key: "first_party_personalized_advertising"
     name: "First Party Personalized Advertising"
-    parentKey: "first_party_advertising"
+    parent_key: "first_party_advertising"
 
   # Marketing, Advertising or Promotion -> Third Party Advertising
   - fides_key: "third_party_personalized_advertising"
     name: "Third Party Personalized Advertising"
-    parentKey: "third_party_advertising"
+    parent_key: "third_party_advertising"
 
   # Third Party Sharing
   - fides_key: "third_party_sharing"
@@ -55,15 +55,15 @@ data_use:
 
   - fides_key: "sharing_for_processing_payments"
     name: "Sharing for Processing Payments"
-    parentKey: "third_party_sharing"
+    parent_key: "third_party_sharing"
 
   - fides_key: "sharing_for_personalized_advertising"
     name: "Sharing for Personalized Advertising"
-    parentKey: "third_party_sharing"
+    parent_key: "third_party_sharing"
 
   - fides_key: "sharing_for_legal_obligation"
     name: "Sharing for Legal Obligation"
-    parentKey: "third_party_sharing"
+    parent_key: "third_party_sharing"
 
   # Collect
   - fides_key: "collect"
