--- a/fidesctl/default_taxonomy/data_categories.yml
+++ b/fidesctl/default_taxonomy/data_categories.yml
@@ -6,161 +6,161 @@ data_category:
 
   - fides_key: credentials
     name: "Credentials"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "User provided authentication data."
 
   - fides_key: name
     name: "Name"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "User's real name."
 
   - fides_key: date_of_birth
     name: "Date of Birth"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "User's date of birth."
 
   - fides_key: user_provided_gender
     name: "User Provided Gender"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "Gender of an individual."
 
   - fides_key: user_provided_race
     name: "User Provided Race"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "Racial or ethnic origin data."
 
   - fides_key: user_provided_sexual_orientation
     name: "User Provided Sexual Orientation"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "Personal sex life or sexual information."
 
   - fides_key: user_provided_non_specific_age
     name: "User Provided Non-Specific Age"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "Age range information."
 
   - fides_key: job_title
     name: "Job Title"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "Professional information."
 
   - fides_key: user_provided_workplace
     name: "User Provided Workplace"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "Organization of employment."
 
   - fides_key: user_provided_religious_belief
     name: "User Provided Religious Belief"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "Religion or religious belief."
 
   - fides_key: provided_contact_information
     name: "Provided Contact Information"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "User provided contact information for purposes other than account management."
 
   - fides_key: health_and_medical_data
     name: "Health and Medical Data"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "Health records or individual's personal medical information."
 
   - fides_key: genetic_data
     name: "Genetic Data"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "Data about the genetic makeup provided by a user."
 
   - fides_key: biometric_data
     name: "Biometric Data"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "Encoded characteristics provided by a user."
 
   - fides_key: childrens_data
     name: "Children's Data"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "Data relating to children."
 
   - fides_key: political_opinion
     name: "Political Opinion"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "Data related to the individual's political opinions."
 
   - fides_key: financial_data
     name: "Financial Data"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "Payment data and financial history."
 
   - fides_key: government_id
     name: "Government ID"
-    parentKey: user_provided_data
+    parent_key: user_provided_data
     description: "State provided identification information."
 
   # User Provided Data -> Financial Data
   - fides_key: user_provided_financial_account_number
     name: "User Provided Financial Account Number"
-    parentKey: financial_data
+    parent_key: financial_data
     description: "User's account number for a payment card, bank account, or other financial system."
 
   # User Provided Data -> Credentials
   - fides_key: password
     name: "Password"
-    parentKey: credentials
+    parent_key: credentials
     description: "Password for system authentication."
 
   - fides_key: biometric_credentials
     name: "Biometric Credentials"
-    parentKey: credentials
+    parent_key: credentials
     description: "Credentials for system authentication."
 
   # User Provided Data -> Provided Contact Information
   - fides_key: user_provided_email
     name: "User Provided Email"
-    parentKey: provided_contact_information
+    parent_key: provided_contact_information
     description: "User's provided email address."
 
   - fides_key: user_provided_street
     name: "User Provided Street"
-    parentKey: provided_contact_information
+    parent_key: provided_contact_information
     description: "User's street level address information."
 
   - fides_key: user_provided_city
     name: "User Provided City"
-    parentKey: provided_contact_information
+    parent_key: provided_contact_information
     description: "User's city level address information."
 
   - fides_key: user_provided_state
     name: "User Provided State"
-    parentKey: provided_contact_information
+    parent_key: provided_contact_information
     description: "User's state level address information."
 
   - fides_key: user_provided_postal_code
     name: "User Provided Postal Code"
-    parentKey: provided_contact_information
+    parent_key: provided_contact_information
     description: "User's postal code."
 
   - fides_key: user_provided_country
     name: "User Provided Country"
-    parentKey: provided_contact_information
+    parent_key: provided_contact_information
     description: "User's country level address information."
 
   - fides_key: user_provided_phone_number
     name: "User Provided Phone Number"
-    parentKey: provided_contact_information
+    parent_key: provided_contact_information
     description: "User's phone number."
 
   # User Provided Data -> Government ID
   - fides_key: national_identification_number
     name: "National Identification Number"
-    parentKey: government_id
+    parent_key: government_id
     description: "State issued personal identification number."
 
   - fides_key: drivers_license_number
     name: "Driver's License Number"
-    parentKey: government_id
+    parent_key: government_id
     description: "State issued driving identification number."
 
   - fides_key: passport_number
     name: "Passport Number"
-    parentKey: government_id
+    parent_key: government_id
     description: "State issued passport data."
 
   # Derived Data
@@ -170,129 +170,129 @@ data_category:
 
   - fides_key: user_identifiable_data
     name: "User Identifiable Data"
-    parentKey: derived_data
+    parent_key: derived_data
     description: "Derived data that is linked to, or identifies a user."
 
   - fides_key: organization_identifiable_data
     name: "Organization Identifiable Data"
-    parentKey: derived_data
+    parent_key: derived_data
     description: "Derived data that is linked to, or identifies an organization."
 
   - fides_key: sensor_data
     name: "Sensor Data"
-    parentKey: derived_data
+    parent_key: derived_data
     description: "Non-user identifiable measurement data derived from sensors and monitoring systems."
 
   # Derived Data -> User Identifiable Data
   - fides_key: telemetry_data
     name: "Telemetry Data"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "User identifiable measurement data from system sensors and monitoring."
 
   - fides_key: device_data
     name: "Device Data"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Data related to a user's device, configuration and setting."
 
   - fides_key: observed_data
     name: "Observed Data"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Data collected through observation of use of the system."
 
   - fides_key: demographic_information
     name: "Demographic Information"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Demographic information about a user."
 
   - fides_key: profiling_data
     name: "Profiling Data"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Preference and interest information about a user."
 
   - fides_key: media_consumption_data
     name: "Media Consumption Data"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Media type consumption information of a user."
 
   - fides_key: browsing_history
     name: "Browsing History"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Content browsing history of a user."
 
   - fides_key: search_history
     name: "Search History"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Records of search history and queries of a user."
 
   - fides_key: location_data
     name: "Location Data"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Records of the location of a user."
 
   - fides_key: social_data
     name: "Social Data"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Social activity and interaction data."
 
   - fides_key: biometric_health_data
     name: "Biometric Health Data"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Encoded characteristic collected about a user."
 
   - fides_key: derived_contact_data
     name: "Derived Contact Data"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Contact information collected about a user."
 
   - fides_key: user_sensor_data
     name: "User Sensor Data"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Measurement data derived about a user's environment through system use."
 
   - fides_key: derived_gender
     name: "Derived Gender"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Gender of an individual."
 
   - fides_key: derived_race
     name: "Derived Race"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Racial or ethnic origin data."
 
   - fides_key: derived_sexual_orientation
     name: "Derived Sexual Orientation"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Personal sex life or sexual information."
 
   - fides_key: derived_non_specific_age
     name: "Derived Non-Specific Age"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Age range information."
 
   - fides_key: derived_workplace
     name: "Derived Workplace"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Organization of employment."
 
   - fides_key: derived_religious_belief
     name: "Derived Religious Belief"
-    parentKey: user_identifiable_data
+    parent_key: user_identifiable_data
     description: "Religion or religious belief."
 
   # Derived Data -> Device Data
   - fides_key: device_id
     name: "Device ID"
-    parentKey: device_data
+    parent_key: device_data
     description: "Device unique identification number."
 
   - fides_key: cookie_id
     name: "Cookie ID"
-    parentKey: device_data
+    parent_key: device_data
     description: "Cookie unique identification number."
 
   - fides_key: ip_address
     name: "IP Address"
-    parentKey: device_data
+    parent_key: device_data
     description: "Unique identifier related to device connection."
 
   # System Data
@@ -302,12 +302,12 @@ data_category:
 
   - fides_key: authentication_data
     name: "Authentication Data"
-    parentKey: system_data
+    parent_key: system_data
     description: "Data used to manage access to the system."
 
   - fides_key: operations_data
     name: "Operations Data"
-    parentKey: system_data
+    parent_key: system_data
     description: "Data used for system operations."
 
   # Account Data
@@ -317,52 +317,52 @@ data_category:
 
   - fides_key: payment_information
     name: "Payment Information"
-    parentKey: account_data
+    parent_key: account_data
     description: "Payment data related to user's account."
 
   - fides_key: account_contact_information
     name: "Account Contact Information"
-    parentKey: account_data
+    parent_key: account_data
     description: "Account data related to user contact information."
 
   # Account Data -> Account Contact Information
   - fides_key: account_email
     name: "Account Email"
-    parentKey: account_contact_information
+    parent_key: account_contact_information
     description: "User account's email address."
 
   - fides_key: account_street
     name: "Account Street"
-    parentKey: account_contact_information
+    parent_key: account_contact_information
     description: "User account's street level address."
 
   - fides_key: account_city
     name: "Account City"
-    parentKey: account_contact_information
+    parent_key: account_contact_information
     description: "User's city level address information."
 
   - fides_key: account_state
     name: "Account State"
-    parentKey: account_contact_information
+    parent_key: account_contact_information
     description: "User's state level address information."
 
   - fides_key: account_postal_code
     name: "Account Postal Code"
-    parentKey: account_contact_information
+    parent_key: account_contact_information
     description: "User's postal code."
 
   - fides_key: account_country
     name: "Account Country"
-    parentKey: account_contact_information
+    parent_key: account_contact_information
     description: "User's country level address information."
 
   - fides_key: account_phone_number
     name: "Account Phone Number"
-    parentKey: account_contact_information
+    parent_key: account_contact_information
     description: "User's phone number."
 
   # Account Data -> Payment Information
   - fides_key: accounts_financial_account_number
     name: "Account's Financial Account Number"
-    parentKey: payment_information
+    parent_key: payment_information
     description: "User's account number for a payment card, bank account, or other financial system."
