--- a/fidesctl/tests/data/passing_taxonomy.yml
+++ b/fidesctl/tests/data/passing_taxonomy.yml
@@ -82,60 +82,60 @@ dataset:
     fides_key: "test_passing_db_dataset"
     name: "Sample DB Dataset"
     description: "This is a Sample Database Dataset"
-    datasetType: "MySQL"
+    dataset_type: "MySQL"
     location: "US East"
     fields:
       - name: "First_Name"
         description: "A First Name Field"
         path: "test_passing_db_dataset.first_name"
-        dataCategories:
+        data_categories:
           - "name"
-        dataQualifier: "identified_data"
+        data_qualifier: "identified_data"
       - name: "Email"
         description: "User's Email"
         path: "sample_db_dataset.email"
-        dataCategories:
+        data_categories:
           - "user_provided_data"
-        dataQualifier: "identified_data"
+        data_qualifier: "identified_data"
       - name: "political_opinion"
         description: "User's political opinion"
         path: "test_passing_db_dataset.political_opinion"
-        dataCategories:
+        data_categories:
           - "political_opinion"
-        dataQualifier: "pseudonymized_data"
+        data_qualifier: "pseudonymized_data"
 
 system:
   - organization_fides_key: 1
     fides_key: "dataAnalyticsSystem"
     name: "Data Analytics System"
     description: "A system used for analyzing customer behaviour."
-    systemType: "Service"
-    privacyDeclarations:
+    system_type: "Service"
+    privacy_declarations:
       - name: "Analyze Anonymous Content"
-        dataCategories:
+        data_categories:
           - "user_provided_data"
-        dataUse: "provide"
-        dataQualifier: "pseudonymized_data"
-        dataSubjects:
+        data_use: "provide"
+        data_qualifier: "pseudonymized_data"
+        data_subjects:
           - "customer"
-    systemDependencies: [customerDataSharingSystem]
+    system_dependencies: [customerDataSharingSystem]
 
   - organization_fides_key: 1
     fides_key: "customerDataSharingSystem"
     name: "Customer Data Sharing System"
     description: "Share data about our users with third-parties."
-    systemType: "Service"
-    privacyDeclarations:
+    system_type: "Service"
+    privacy_declarations:
       - name: "Share Political Opinions"
-        dataCategories:
+        data_categories:
           - "political_opinion"
-        dataUse: "share"
-        dataQualifier: "identified_data"
-        dataSubjects:
+        data_use: "share"
+        data_qualifier: "identified_data"
+        data_subjects:
           - "customer"
-        datasetReferences:
+        dataset_references:
           - "sample_db_dataset.Email"
-    systemDependencies: []
+    system_dependencies: []
 
 policy:
   - organization_fides_key: 1
@@ -147,38 +147,38 @@ policy:
         fides_key: "rejectTargetedMarketing"
         name: "Reject Targeted Biometric Marketing"
         description: "Disallow targeted marketing towards customers based on biometric data."
-        dataCategories:
+        data_categories:
           inclusion: "ANY"
           values:
             - biometric_data
-        dataUses:
+        data_uses:
           inclusion: ANY
           values:
             - market_advertise_or_promote
             - offer_upgrades_or_upsell
-        dataSubjects:
+        data_subjects:
           inclusion: ANY
           values:
             - customer
-        dataQualifier: "anonymized_data"
+        data_qualifier: "anonymized_data"
         action: REJECT
 
       - organization_fides_key: 1
         fides_key: rejectSharingPoliticalOpinions
         name: "Disallow Sharing Political Opinions"
         description: "Disallow sharing political opinions with third-parties."
-        dataCategories:
+        data_categories:
           inclusion: ANY
           values:
             - political_opinion
-        dataUses:
+        data_uses:
           inclusion: ALL
           values:
             - share
-        dataSubjects:
+        data_subjects:
           inclusion: ANY
           values:
             - customer
             - patient
-        dataQualifier: "anonymized_data"
+        data_qualifier: "anonymized_data"
         action: REJECT
