mypy and pylint passing [ci skip]

--- a/fidesctl/mypy.ini
+++ b/fidesctl/mypy.ini
@@ -1,4 +1,5 @@
 [mypy] 
+show_error_codes = True
 check_untyped_defs = True
 disallow_any_explicit = True
 disallow_untyped_defs = True
@@ -18,4 +19,10 @@ warn_required_dynamic_aliases = True
 warn_untyped_fields = True
 
 [mypy-src.fidesctl._version]
+ignore_errors = True
+
+[mypy-src.fidesapi.crud]
+ignore_errors = True
+
+[mypy-src.fidesapi.sql_models]
 ignore_errors = True
