--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,7 +6,6 @@ on:
     branches:
       - main
     paths: # Only run tests when certain paths change
-      - fides-server/**
       - fidesctl/**
       - .github/workflows/test.yaml
 
@@ -19,11 +18,8 @@ jobs:
       - name: Build the Docker Images
         run: make compose-build
 
-      - name: Test Fides Server
-        run: make server-test
-
       - name: Check fidesctl installed
-        run: make fidesctl-check-install
+        run: make check-install
 
       - name: Format Fidesctl
         run: make black
