checkpoint! updating so that alembic works programmatically from within the fides codebase [ci skip]

--- a/fidesctl/MANIFEST.in
+++ b/fidesctl/MANIFEST.in
@@ -3,3 +3,4 @@ include requirements.txt
 include dev-requirements.txt
 include versioneer.py
 include src/fidesctl/_version.py
+include src/alembic.ini
