the config will now use defaults instead of failing hard, finished the deployment rewrite

--- a/fidesctl/pyproject.toml
+++ b/fidesctl/pyproject.toml
@@ -38,6 +38,7 @@ exclude = '''
 # Pylint
 ########
 [tool.pylint.messages_control]
+ignore="migrations"
 disable=[
     "line-too-long",
     "too-few-public-methods",
