--- a/fidesctl/mypy.ini
+++ b/fidesctl/mypy.ini
@@ -4,6 +4,7 @@ check_untyped_defs = True
 disallow_any_explicit = True
 disallow_untyped_defs = True
 files = src/**/**.py
+exclude = migrations/
 ignore_missing_imports = True
 no_implicit_reexport = True
 pretty = True
