--- a/fidesctl/mypy.ini
+++ b/fidesctl/mypy.ini
@@ -3,7 +3,7 @@ show_error_codes = True
 check_untyped_defs = True
 disallow_any_explicit = True
 disallow_untyped_defs = True
-files = src/**/**.py
+files = src/
 exclude = migrations/
 ignore_missing_imports = True
 no_implicit_reexport = True
