--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
     command: uvicorn --host 0.0.0.0 --port 8080 --reload fidesapi.main:app
     depends_on:
-      fidesdb:
+      fidesctl-db:
         condition: service_healthy
     expose:
       - 8080
@@ -19,7 +19,7 @@ services:
     env_file:
       - env_files/fides.env
 
-  fidesdb:
+  fidesctl-db:
     image: postgres:12
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
