--- a/env_files/db.env
+++ b/env_files/db.env
@@ -1,3 +1,3 @@
-POSTGRES_USER="fidesdb"
-POSTGRES_PASSWORD="fidesdb"
-POSTGRES_DATABASE="fidesdb"
+POSTGRES_USER="fidesctl"
+POSTGRES_PASSWORD="fidesctl"
+POSTGRES_DATABASE="fidesctl"
