Update Docs Post-Rewrite (#112)
* Update Docs Post-Rewrite

* checkpoint! updating so that alembic works programmatically from within the fides codebase [ci skip]

* cleans up the migration commands [ci skip]

* the config will now use defaults instead of failing hard, finished the deployment rewrite

* updates the getting started guides [ci skip]

* updates the CLI page

* starts updating the tutorial [ci skip]

* fix some formatting issues

* fixes all of the ci issues

* clean up all of the comments from review

Co-authored-by: Thomas La Piana <tal103020@icloud.com>

--- a/fidesctl/mypy.ini
+++ b/fidesctl/mypy.ini
@@ -3,7 +3,8 @@ show_error_codes = True
 check_untyped_defs = True
 disallow_any_explicit = True
 disallow_untyped_defs = True
-files = src/**/**.py
+files = src/
+exclude = migrations/
 ignore_missing_imports = True
 no_implicit_reexport = True
 pretty = True
