--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -4,32 +4,15 @@ on:
   push:
     branches:
       - main
+    tags:
+      - "*"
 
 env:
   DOCKER_USER: ethycaci
   DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
 
 jobs:
-  push-server:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0 # This is required to properly tag images
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ env.DOCKER_USER }}
-          password: ${{ env.DOCKER_TOKEN }}
-
-      - name: Build FidesAPI
-        run: make server-build
-
-      - name: Push FidesAPI
-        run: make server-push
-
-  push-cli:
+  push-fidesctl:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -43,7 +26,7 @@ jobs:
           password: ${{ env.DOCKER_TOKEN }}
 
       - name: Build Fidesctl
-        run: make cli-build
+        run: make build
 
       - name: Push Fidesctl
-        run: make cli-push
+        run: make push
