--- a/fidesctl/demo_resources/demo_system.yml
+++ b/fidesctl/demo_resources/demo_system.yml
@@ -5,30 +5,27 @@ system:
     description: "A system used for analyzing customer behaviour."
     system_type: "Service"
     privacy_declarations:
-      - name: "Analyze Anonymous Content"
+      - name: "Analyze user behaviour for improvements."
         data_categories:
-          - "account_data"
-        data_use: "improve"
-        data_qualifier: "anonymized_data"
+          - provided_contact_information
+          - browsing_history
+          - cookie_id
+        data_use: improve_the_product_or_service
+        data_qualifier: identified_data
         data_subjects:
-          - "customer"
-        dataset_references:
-          - "sample_db_dataset.Food_Preference"
-    system_dependencies: [customerDataSharingSystem]
+          - customer
 
   - organization_fides_key: 1
-    fides_key: "customerDataSharingSystem"
-    name: "Customer Data Sharing System"
-    description: "Share data about our users with third-parties."
+    fides_key: "marketingSystem"
+    name: "Customer Marketing System"
+    description: "Collect data about our users for marketing."
     system_type: "Service"
     privacy_declarations:
-      - name: "Share Political Opinions"
+      - name: "Collect for marketing"
         data_categories:
-          - "political_opinion"
-        data_use: "share"
-        data_qualifier: "anonymized_data"
+          - browsing_history
+          - cookie_id
+        data_use: marketing_advertising_or_promotion
         data_subjects:
-          - "customer"
-        dataset_references:
-          - "sample_db_dataset.Email"
-    system_dependencies: []
+          - customer
+        data_qualifier: identified_data
